# gpt5

./: CHANGELOG.md  Cargo.toml  README.md
examples/: README.md  basic_usage.rs  error_handling.rs  function_calling.rs  quick_start.rs  simple_chat.rs  web_search.rs
src/: client.rs  enums.rs  lib.rs  models.rs  requests.rs  responses.rs
tests/: integration_tests.rs
