[package]
name = "gpt5"
version = "0.1.0"
edition = "2021"
authors = ["Moji <moji.ndr@gmail.com>"]
description = "A Rust client library for OpenAI's GPT-5 API with support for function calling, reasoning, and streaming"
license = "MIT"
repository = "https://github.com/mojindri/gpt5"
homepage = "https://github.com/mojindri/gpt5"
documentation = "https://docs.rs/gpt5"
keywords = ["openai", "gpt5", "ai", "llm", "function-calling"]
categories = ["api-bindings", "artificial-intelligence"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
